src/css/style.css
/* HOME PAGE */

@font-face {
  font-family: 'Panic';
  src: url('../fonts/Panic.ttf') format('truetype');
  font-weight: 600;
  font-style: normal;
}

@font-face {
  font-family: 'RobotoSerif';
  src: url('../fonts/RobotoSerif.ttf') format('truetype');
  font-weight: 500;
  font-style: normal;
}
@font-face {
  font-family: 'RobotoSerif';
  src: url('../fonts/RobotoSerif.ttf') format('truetype');
  font-weight: 700;
  font-style: normal;
}

body {
  font-family: 'RobotoSerif';
  margin: 0;
}

body > * {
  box-sizing: border-box;
}

a {
  color: white;
  text-decoration: none;
  cursor: pointer;
}

header {
  font-size: 1.5rem;
  height: 3rem;
  display: flex;
  justify-content: center;
  gap: 5vw;
}

header a {
  background-color: rgba(0, 0, 0, 0.8);
  border-radius: 0 0 1.5rem 1.5rem;
  padding: 0 clamp(1rem, 2.5vw, 4rem);
  display: flex;
  align-items: center;
  transition: all 0.25s ease-in-out;
}

header a:hover {
  color: #EFDA2A;
  background-color: rgba(0, 0, 0, 1);
}

.banner {
  color: white;
  background: url('../img/mind-blown.jpg') 50% 100% no-repeat;
  width: 100vw;
  height: 100vh;
  background-size: auto 115%;
  overflow: hidden;
  display: grid;
  grid-template: auto 1fr auto / 1fr;
  align-items: center;
  justify-content: center;
}

h1 {
  font-family: 'Panic';
  font-size: 6rem;
  line-height: 4rem;
  text-shadow: 0 0 2rem black;
  text-align: center;
  margin: 0;
}

h1 span {
  font-family: 'RobotoSerif';
  font-size: 2.5rem;
  margin: 0;
}

footer {
  font-size: 1rem;
  width: 100%;
  display: flex;
  justify-content: space-between;
  text-shadow: 0 0 0.4rem black;
}

footer a:hover {
  text-decoration: underline;
}

footer p:first-child {
  padding-left: 3vw;
}

footer p:last-child {
  padding-right: 3vw;
}

/* COFFEE PAGE */

.banner.repeat {
  background: url('../img/mind-blown.jpg') no-repeat;
  background-repeat: repeat-y;
  background-size: contain;
  width: auto;
  height: auto;
}

section.page-section {
  background-color: rgba(32, 34, 113, 0.92);
  border-radius: 1rem;
  margin: 2rem 3vw;
  padding: 3rem 4vw;
}

section.page-section h1 {
  font-size: 4rem;
  grid-column: 1 / -1;
}

.coffee-grid {
  padding-top: 2rem;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  gap: 1.5rem;
}

a.grid-item {
  background-color: #CB687D;
  border-radius: 0.5rem;
  padding: 1rem;
  display: flex;
  flex-direction: column;
  align-items: center;
}

a.grid-item h2 {
  font-size: 1.5rem;
  font-weight: bold;
  margin: 0.5em 0 0.3rem 0;
  text-align: center;
}

a.grid-item p {
  color:rgba(255, 255, 255, 0.8);
  margin: 0 0 0.75em 0;
}

a.grid-item img {
  height: auto;
  width: 100%;
  overflow: hidden;
}

/* CONTACT PAGE */

section.contact-section {
  text-align: center;
  padding-bottom: 1rem;
  margin: auto;
}

section.contact-section h1 {
  font-size: 4rem;
  padding-bottom: 1.5rem;
}

section.contact-section p {
  font-size: 1.5rem;
  line-height: 1.75rem;
}

/* MEDIA QUERIES */

@media screen and (max-width: 1100px) {
  section.contact-section {
    margin: 2rem 3vw;
  }
}

@media screen and (max-width: 768px) {
  header {
    font-size: 1.25rem;
  }

  h1 {
    font-size: 5.5rem;
    line-height: 5.5rem;
  }

  h1 span {
    font-size: 2rem;
  }

  footer {
    font-size: 0.8rem;
  }

  section.page-section {
    padding-top: 2rem;
  }

  section.page-section h1 {
    font-size: 3.25rem;
  }

  .coffee-grid {
    padding-top: 1rem;
  }

  section.contact-section h1 {
    font-size: 3rem;
    padding-bottom: 0;
  }

  section.contact-section p {
    font-size: 1.25rem;
  }
  
}

@media screen and (max-width: 480px) {
  section.page-section h1 {
    font-size: 2.8rem;
  }

  h1.contact-heading {
    font-size: 3rem;
  }

  section.contact-section h1 {
    font-size: 2.5rem;
  }

  section.contact-section p {
    font-size: 1rem;
  }
}

